2. Syntax analysis/y.output
Estado 18 conflitos: 4 de deslocamento/redução
Estado 39 conflitos: 1 de deslocamento/redução
Estado 42 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: expre

    2 expre: INT
    3      | STRING
    4      | NIL
    5      | BREAK
    6      | lvalue
    7      | lvalue ASSIGN expre
    8      | LPAREN expre_seq RPAREN
    9      | expre_opera
   10      | expre_compa
   11      | expre_fun_call
   12      | expre_record
   13      | expre_if
   14      | expre_for
   15      | expre_while
   16      | expre_switch
   17      | expre_let

   18 expre_opera: expre PLUS expre
   19            | expre MINUS expre
   20            | expre TIMES expre
   21            | expre DIVIDE expre

   22 expre_compa: expre LT expre
   23            | expre LE expre
   24            | expre GT expre
   25            | expre GE expre
   26            | expre EQ expre
   27            | expre NEQ expre
   28            | expre AND expre
   29            | expre OR expre
   30            | MINUS expre

   31 expre_fun_call: ID LPAREN args RPAREN

   32 args: %empty
   33     | arg_list

   34 arg_list: expre
   35         | expre COMMA arg_list

   36 lvalue: ID
   37       | lvalue DOT ID
   38       | lvalue LBRACK expre RBRACK
   39       | lvalue OF expre

   40 expre_record: ID LBRACE efields RBRACE

   41 efields: %empty
   42        | efield_list

   43 efield_list: efield
   44            | efield COMMA efield_list

   45 efield: ID EQ expre

   46 expre_seq: %empty
   47          | expre
   48          | expre_seq SEMICOLON expre

   49 expre_if: IF expre THEN expre
   50         | IF expre THEN expre ELSE expre

   51 expre_for: FOR ID ASSIGN expre TO expre DO expre

   52 expre_while: WHILE expre DO expre

   53 expre_switch: SWITCH op_swi

   54 op_swi: LPAREN var_swi RPAREN LBRACE ops_swi RBRACE

   55 var_swi: INT
   56        | STRING

   57 ops_swi: CASE var_swi COLON expre BREAK COLON
   58        | DEFAULT COLON expre SEMICOLON

   59 expre_let: LET decs IN expre_seq END

   60 decs: %empty
   61     | dec decs

   62 dec: fun_decs
   63    | var_dec
   64    | type_decs

   65 fun_decs: fundec
   66         | fundec fun_decs

   67 fundec: FUNCTION ID LPAREN field_list RPAREN EQ expre
   68       | FUNCTION ID LPAREN field_list RPAREN COLON ID EQ expre

   69 tyfields: %empty
   70         | field_list

   71 field_list: tyfield
   72           | field_list COMMA tyfield

   73 tyfield: ID COLON ID

   74 var_dec: VAR ID ASSIGN expre
   75        | VAR ID COLON ID ASSIGN expre

   76 type_decs: ty_dec
   77          | ty_dec type_decs

   78 ty_dec: TYPE ID EQ ty

   79 ty: ID
   80   | LBRACE tyfields RBRACE
   81   | ARRAY OF ID


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    ID <sval> (258) 31 36 37 40 45 51 67 68 73 74 75 78 79 81
    STRING <sval> (259) 3 56
    INT <ival> (260) 2 55
    COMMA (261) 35 44 72
    COLON (262) 57 58 68 73 75
    SEMICOLON (263) 48 58
    LPAREN (264) 8 31 54 67 68
    RPAREN (265) 8 31 54 67 68
    LBRACK (266) 38
    RBRACK (267) 38
    LBRACE (268) 40 54 80
    RBRACE (269) 40 54 80
    DOT (270) 37
    PLUS (271) 18
    MINUS (272) 19 30
    TIMES (273) 20
    DIVIDE (274) 21
    EQ (275) 26 45 67 68 78
    NEQ (276) 27
    LT (277) 22
    LE (278) 23
    GT (279) 24
    GE (280) 25
    AND (281) 28
    OR (282) 29
    ASSIGN (283) 7 51 74 75
    ARRAY (284) 81
    IF (285) 49 50
    THEN (286) 49 50
    ELSE (287) 50
    WHILE (288) 52
    FOR (289) 51
    TO (290) 51
    DO (291) 51 52
    LET (292) 59
    IN (293) 59
    END (294) 59
    OF (295) 39 81
    BREAK (296) 5 57
    NIL (297) 4
    FUNCTION (298) 67 68
    VAR (299) 74 75
    TYPE (300) 78
    SWITCH (301) 53
    CASE (302) 57
    DEFAULT (303) 58
    UMINUS (304)


Não terminais com as regras onde eles aparecem

    $accept (50)
        à esquerda: 0
    program <A_expre> (51)
        à esquerda: 1
        à direita: 0
    expre <A_expre> (52)
        à esquerda: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17
        à direita: 1 7 18 19 20 21 22 23 24 25 26 27 28 29 30 34 35 38 39 45 47 48 49 50 51 52 57 58 67 68 74 75
    expre_opera <A_expre> (53)
        à esquerda: 18 19 20 21
        à direita: 9
    expre_compa <A_expre> (54)
        à esquerda: 22 23 24 25 26 27 28 29 30
        à direita: 10
    expre_fun_call <A_expre> (55)
        à esquerda: 31
        à direita: 11
    args <A_expre_list> (56)
        à esquerda: 32 33
        à direita: 31
    arg_list <A_expre_list> (57)
        à esquerda: 34 35
        à direita: 33 35
    lvalue <A_var> (58)
        à esquerda: 36 37 38 39
        à direita: 6 7 37 38 39
    expre_record <A_expre> (59)
        à esquerda: 40
        à direita: 12
    efields <A_efield_list> (60)
        à esquerda: 41 42
        à direita: 40
    efield_list <A_efield_list> (61)
        à esquerda: 43 44
        à direita: 42 44
    efield <A_efield> (62)
        à esquerda: 45
        à direita: 43 44
    expre_seq <A_expre_list> (63)
        à esquerda: 46 47 48
        à direita: 8 48 59
    expre_if <A_expre> (64)
        à esquerda: 49 50
        à direita: 13
    expre_for <A_expre> (65)
        à esquerda: 51
        à direita: 14
    expre_while <A_expre> (66)
        à esquerda: 52
        à direita: 15
    expre_switch <A_expre> (67)
        à esquerda: 53
        à direita: 16
    op_swi <A_expre> (68)
        à esquerda: 54
        à direita: 53
    var_swi <A_expre> (69)
        à esquerda: 55 56
        à direita: 54 57
    ops_swi <A_expre> (70)
        à esquerda: 57 58
        à direita: 54
    expre_let <A_expre> (71)
        à esquerda: 59
        à direita: 17
    decs <A_decs> (72)
        à esquerda: 60 61
        à direita: 59 61
    dec <A_dec> (73)
        à esquerda: 62 63 64
        à direita: 61
    fun_decs <A_fundecs> (74)
        à esquerda: 65 66
        à direita: 62 66
    fundec <A_fundec> (75)
        à esquerda: 67 68
        à direita: 65 66
    tyfields <A_field_list> (76)
        à esquerda: 69 70
        à direita: 80
    field_list <A_field_list> (77)
        à esquerda: 71 72
        à direita: 67 68 70 72
    tyfield <A_field> (78)
        à esquerda: 73
        à direita: 71 72
    var_dec <A_dec> (79)
        à esquerda: 74 75
        à direita: 63
    type_decs <A_name_ty_list> (80)
        à esquerda: 76 77
        à direita: 64 77
    ty_dec <A_namety> (81)
        à esquerda: 78
        à direita: 76 77
    ty <A_ty> (82)
        à esquerda: 79 80 81
        à direita: 78


Estado 0

    0 $accept: . program $end

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    program         ir ao estado 13
    expre           ir ao estado 14
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 1

   31 expre_fun_call: ID . LPAREN args RPAREN
   36 lvalue: ID .
   40 expre_record: ID . LBRACE efields RBRACE

    LPAREN  deslocar, e ir ao estado 25
    LBRACE  deslocar, e ir ao estado 26

    $padrão  reduzir usando a regra 36 (lvalue)


Estado 2

    3 expre: STRING .

    $padrão  reduzir usando a regra 3 (expre)


Estado 3

    2 expre: INT .

    $padrão  reduzir usando a regra 2 (expre)


Estado 4

    8 expre: LPAREN . expre_seq RPAREN

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 46 (expre_seq)

    expre           ir ao estado 27
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_seq       ir ao estado 28
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 5

   30 expre_compa: MINUS . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 29
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 6

   49 expre_if: IF . expre THEN expre
   50         | IF . expre THEN expre ELSE expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 30
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 7

   52 expre_while: WHILE . expre DO expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 31
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 8

   51 expre_for: FOR . ID ASSIGN expre TO expre DO expre

    ID  deslocar, e ir ao estado 32


Estado 9

   59 expre_let: LET . decs IN expre_seq END

    FUNCTION  deslocar, e ir ao estado 33
    VAR       deslocar, e ir ao estado 34
    TYPE      deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 60 (decs)

    decs       ir ao estado 36
    dec        ir ao estado 37
    fun_decs   ir ao estado 38
    fundec     ir ao estado 39
    var_dec    ir ao estado 40
    type_decs  ir ao estado 41
    ty_dec     ir ao estado 42


Estado 10

    5 expre: BREAK .

    $padrão  reduzir usando a regra 5 (expre)


Estado 11

    4 expre: NIL .

    $padrão  reduzir usando a regra 4 (expre)


Estado 12

   53 expre_switch: SWITCH . op_swi

    LPAREN  deslocar, e ir ao estado 43

    op_swi  ir ao estado 44


Estado 13

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 45


Estado 14

    1 program: expre .
   18 expre_opera: expre . PLUS expre
   19            | expre . MINUS expre
   20            | expre . TIMES expre
   21            | expre . DIVIDE expre
   22 expre_compa: expre . LT expre
   23            | expre . LE expre
   24            | expre . GT expre
   25            | expre . GE expre
   26            | expre . EQ expre
   27            | expre . NEQ expre
   28            | expre . AND expre
   29            | expre . OR expre

    PLUS    deslocar, e ir ao estado 46
    MINUS   deslocar, e ir ao estado 47
    TIMES   deslocar, e ir ao estado 48
    DIVIDE  deslocar, e ir ao estado 49
    EQ      deslocar, e ir ao estado 50
    NEQ     deslocar, e ir ao estado 51
    LT      deslocar, e ir ao estado 52
    LE      deslocar, e ir ao estado 53
    GT      deslocar, e ir ao estado 54
    GE      deslocar, e ir ao estado 55
    AND     deslocar, e ir ao estado 56
    OR      deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 1 (program)


Estado 15

    9 expre: expre_opera .

    $padrão  reduzir usando a regra 9 (expre)


Estado 16

   10 expre: expre_compa .

    $padrão  reduzir usando a regra 10 (expre)


Estado 17

   11 expre: expre_fun_call .

    $padrão  reduzir usando a regra 11 (expre)


Estado 18

    6 expre: lvalue .
    7      | lvalue . ASSIGN expre
   37 lvalue: lvalue . DOT ID
   38       | lvalue . LBRACK expre RBRACK
   39       | lvalue . OF expre

    LBRACK  deslocar, e ir ao estado 58
    DOT     deslocar, e ir ao estado 59
    ASSIGN  deslocar, e ir ao estado 60
    OF      deslocar, e ir ao estado 61

    LBRACK    [reduzir usando a regra 6 (expre)]
    DOT       [reduzir usando a regra 6 (expre)]
    ASSIGN    [reduzir usando a regra 6 (expre)]
    OF        [reduzir usando a regra 6 (expre)]
    $padrão  reduzir usando a regra 6 (expre)


Estado 19

   12 expre: expre_record .

    $padrão  reduzir usando a regra 12 (expre)


Estado 20

   13 expre: expre_if .

    $padrão  reduzir usando a regra 13 (expre)


Estado 21

   14 expre: expre_for .

    $padrão  reduzir usando a regra 14 (expre)


Estado 22

   15 expre: expre_while .

    $padrão  reduzir usando a regra 15 (expre)


Estado 23

   16 expre: expre_switch .

    $padrão  reduzir usando a regra 16 (expre)


Estado 24

   17 expre: expre_let .

    $padrão  reduzir usando a regra 17 (expre)


Estado 25

   31 expre_fun_call: ID LPAREN . args RPAREN

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 32 (args)

    expre           ir ao estado 62
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    args            ir ao estado 63
    arg_list        ir ao estado 64
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 26

   40 expre_record: ID LBRACE . efields RBRACE

    ID  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 41 (efields)

    efields      ir ao estado 66
    efield_list  ir ao estado 67
    efield       ir ao estado 68


Estado 27

   18 expre_opera: expre . PLUS expre
   19            | expre . MINUS expre
   20            | expre . TIMES expre
   21            | expre . DIVIDE expre
   22 expre_compa: expre . LT expre
   23            | expre . LE expre
   24            | expre . GT expre
   25            | expre . GE expre
   26            | expre . EQ expre
   27            | expre . NEQ expre
   28            | expre . AND expre
   29            | expre . OR expre
   47 expre_seq: expre .

    PLUS    deslocar, e ir ao estado 46
    MINUS   deslocar, e ir ao estado 47
    TIMES   deslocar, e ir ao estado 48
    DIVIDE  deslocar, e ir ao estado 49
    EQ      deslocar, e ir ao estado 50
    NEQ     deslocar, e ir ao estado 51
    LT      deslocar, e ir ao estado 52
    LE      deslocar, e ir ao estado 53
    GT      deslocar, e ir ao estado 54
    GE      deslocar, e ir ao estado 55
    AND     deslocar, e ir ao estado 56
    OR      deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 47 (expre_seq)


Estado 28

    8 expre: LPAREN expre_seq . RPAREN
   48 expre_seq: expre_seq . SEMICOLON expre

    SEMICOLON  deslocar, e ir ao estado 69
    RPAREN     deslocar, e ir ao estado 70


Estado 29

   18 expre_opera: expre . PLUS expre
   19            | expre . MINUS expre
   20            | expre . TIMES expre
   21            | expre . DIVIDE expre
   22 expre_compa: expre . LT expre
   23            | expre . LE expre
   24            | expre . GT expre
   25            | expre . GE expre
   26            | expre . EQ expre
   27            | expre . NEQ expre
   28            | expre . AND expre
   29            | expre . OR expre
   30            | MINUS expre .

    EQ   deslocar, e ir ao estado 50
    NEQ  deslocar, e ir ao estado 51
    LT   deslocar, e ir ao estado 52
    LE   deslocar, e ir ao estado 53
    GT   deslocar, e ir ao estado 54
    GE   deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 30 (expre_compa)


Estado 30

   18 expre_opera: expre . PLUS expre
   19            | expre . MINUS expre
   20            | expre . TIMES expre
   21            | expre . DIVIDE expre
   22 expre_compa: expre . LT expre
   23            | expre . LE expre
   24            | expre . GT expre
   25            | expre . GE expre
   26            | expre . EQ expre
   27            | expre . NEQ expre
   28            | expre . AND expre
   29            | expre . OR expre
   49 expre_if: IF expre . THEN expre
   50         | IF expre . THEN expre ELSE expre

    PLUS    deslocar, e ir ao estado 46
    MINUS   deslocar, e ir ao estado 47
    TIMES   deslocar, e ir ao estado 48
    DIVIDE  deslocar, e ir ao estado 49
    EQ      deslocar, e ir ao estado 50
    NEQ     deslocar, e ir ao estado 51
    LT      deslocar, e ir ao estado 52
    LE      deslocar, e ir ao estado 53
    GT      deslocar, e ir ao estado 54
    GE      deslocar, e ir ao estado 55
    AND     deslocar, e ir ao estado 56
    OR      deslocar, e ir ao estado 57
    THEN    deslocar, e ir ao estado 71


Estado 31

   18 expre_opera: expre . PLUS expre
   19            | expre . MINUS expre
   20            | expre . TIMES expre
   21            | expre . DIVIDE expre
   22 expre_compa: expre . LT expre
   23            | expre . LE expre
   24            | expre . GT expre
   25            | expre . GE expre
   26            | expre . EQ expre
   27            | expre . NEQ expre
   28            | expre . AND expre
   29            | expre . OR expre
   52 expre_while: WHILE expre . DO expre

    PLUS    deslocar, e ir ao estado 46
    MINUS   deslocar, e ir ao estado 47
    TIMES   deslocar, e ir ao estado 48
    DIVIDE  deslocar, e ir ao estado 49
    EQ      deslocar, e ir ao estado 50
    NEQ     deslocar, e ir ao estado 51
    LT      deslocar, e ir ao estado 52
    LE      deslocar, e ir ao estado 53
    GT      deslocar, e ir ao estado 54
    GE      deslocar, e ir ao estado 55
    AND     deslocar, e ir ao estado 56
    OR      deslocar, e ir ao estado 57
    DO      deslocar, e ir ao estado 72


Estado 32

   51 expre_for: FOR ID . ASSIGN expre TO expre DO expre

    ASSIGN  deslocar, e ir ao estado 73


Estado 33

   67 fundec: FUNCTION . ID LPAREN field_list RPAREN EQ expre
   68       | FUNCTION . ID LPAREN field_list RPAREN COLON ID EQ expre

    ID  deslocar, e ir ao estado 74


Estado 34

   74 var_dec: VAR . ID ASSIGN expre
   75        | VAR . ID COLON ID ASSIGN expre

    ID  deslocar, e ir ao estado 75


Estado 35

   78 ty_dec: TYPE . ID EQ ty

    ID  deslocar, e ir ao estado 76


Estado 36

   59 expre_let: LET decs . IN expre_seq END

    IN  deslocar, e ir ao estado 77


Estado 37

   61 decs: dec . decs

    FUNCTION  deslocar, e ir ao estado 33
    VAR       deslocar, e ir ao estado 34
    TYPE      deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 60 (decs)

    decs       ir ao estado 78
    dec        ir ao estado 37
    fun_decs   ir ao estado 38
    fundec     ir ao estado 39
    var_dec    ir ao estado 40
    type_decs  ir ao estado 41
    ty_dec     ir ao estado 42


Estado 38

   62 dec: fun_decs .

    $padrão  reduzir usando a regra 62 (dec)


Estado 39

   65 fun_decs: fundec .
   66         | fundec . fun_decs

    FUNCTION  deslocar, e ir ao estado 33

    FUNCTION  [reduzir usando a regra 65 (fun_decs)]
    $padrão  reduzir usando a regra 65 (fun_decs)

    fun_decs  ir ao estado 79
    fundec    ir ao estado 39


Estado 40

   63 dec: var_dec .

    $padrão  reduzir usando a regra 63 (dec)


Estado 41

   64 dec: type_decs .

    $padrão  reduzir usando a regra 64 (dec)


Estado 42

   76 type_decs: ty_dec .
   77          | ty_dec . type_decs

    TYPE  deslocar, e ir ao estado 35

    TYPE      [reduzir usando a regra 76 (type_decs)]
    $padrão  reduzir usando a regra 76 (type_decs)

    type_decs  ir ao estado 80
    ty_dec     ir ao estado 42


Estado 43

   54 op_swi: LPAREN . var_swi RPAREN LBRACE ops_swi RBRACE

    STRING  deslocar, e ir ao estado 81
    INT     deslocar, e ir ao estado 82

    var_swi  ir ao estado 83


Estado 44

   53 expre_switch: SWITCH op_swi .

    $padrão  reduzir usando a regra 53 (expre_switch)


Estado 45

    0 $accept: program $end .

    $padrão  aceitar


Estado 46

   18 expre_opera: expre PLUS . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 84
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 47

   19 expre_opera: expre MINUS . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 85
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 48

   20 expre_opera: expre TIMES . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 86
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 49

   21 expre_opera: expre DIVIDE . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 87
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 50

   26 expre_compa: expre EQ . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 88
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 51

   27 expre_compa: expre NEQ . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 89
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 52

   22 expre_compa: expre LT . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 90
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 53

   23 expre_compa: expre LE . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 91
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 54

   24 expre_compa: expre GT . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre           ir ao estado 92
    expre_opera     ir ao estado 15
    expre_compa     ir ao estado 16
    expre_fun_call  ir ao estado 17
    lvalue          ir ao estado 18
    expre_record    ir ao estado 19
    expre_if        ir ao estado 20
    expre_for       ir ao estado 21
    expre_while     ir ao estado 22
    expre_switch    ir ao estado 23
    expre_let       ir ao estado 24


Estado 55

   25 expre_compa: expre GE . expre
